tdf#156146 xmloff: ODF import: add backward compatibility hack

As a follow-up to ade0a153f453500f15343380ac937252992733e0 "tdf#114287
xmloff: ODF import: fix text:list override of list style", add some ugly
compatibility hack to preserve the visual layout of documents produced
by LO versions before 7.6.

Override the left/first-line margin of the applied numbering rules with
what is in the paragraph or paragraph style, and try to do this only in
the specific situation where the list style is the same.

Change-Id: I1f4520c9bf9d2257d2e3864e4ddb2d28451bbd2f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157284
Tested-by: Jenkins
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit 7cf5faec6fdbc27dd77d2d36fb2ff205322cba0d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157325
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>